force-app/main/default/objects/CA_Extrato__c/CA_Extrato__c.object-meta.xml
<CustomObject>
    <label>Extrato</label>
    <nameField>
        <label>Extrato Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extratos</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>