force-app/main/default/objects/CA_Extrato__c/fields/CA_Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>CA_Beneficiario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiário</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Extratos</relationshipLabel>
    <relationshipName>Extratos</relationshipName>
    <type>Lookup</type>
</CustomField>