force-app/main/default/objects/CA_Extrato__c/fields/CA_SaldoAnterior__c.field-meta.xml
<CustomField>
    <fullName>CA_SaldoAnterior__c</fullName>
    <label>Saldo Anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>