force-app/main/default/objects/CA_Extrato__c/fields/CA_SaldoAposPrevisao__c.field-meta.xml
<CustomField>
    <fullName>CA_SaldoAposPrevisao__c</fullName>
    <label>Saldo Após Previsão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>