force-app/main/default/objects/CA_Extrato__c/fields/CA_SaldoAtual__c.field-meta.xml
<CustomField>
    <fullName>CA_SaldoAtual__c</fullName>
    <label>Saldo Atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>