force-app/main/default/objects/CA_Extrato__c/fields/CA_TotalPagamentos__c.field-meta.xml
<CustomField>
    <fullName>CA_TotalPagamentos__c</fullName>
    <label>Total de Pagamentos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>