force-app/main/default/objects/CA_Extrato__c/fields/CA_TotalPrevisao__c.field-meta.xml
<CustomField>
    <fullName>CA_TotalPrevisao__c</fullName>
    <label>Total da Previsão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>