force-app/main/default/objects/CA_Extrato__c/listViews/CA_TodosExtratos.listView-meta.xml
<ListView>
    <fullName>CA_TodosExtratos</fullName>
    <columns>NAME</columns>
    <columns>CA_SaldoAnterior__c</columns>
    <columns>CA_TotalPagamentos__c</columns>
    <columns>CA_SaldoAtual__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos Extratos</label>
</ListView>